# FINAL_DRF_NEXT_sept_2024

./: .cursorignore  .deployment_state.json  .dockerignore  .env  .eslintrc.json  .gitattributes  .gitignore  .vercelignore  .windsurfrules  ACCESSIBILITY_CONTRAST_FIX.md  ADD_MODERATOR_CHECK.txt  AI_IMAGE_GENERATION_FIX.md  ALTERNATIVE_SOLUTION.md  ANTI_DETECTION_CONFIG.md  API_REFACTORING_FINAL_REPORT.md  API_ROUTES_REFACTORING_PROGRESS.md  ASYNC_CONSISTENCY_UPDATE.md  AUTH_ARCHITECTURE_FIX.md  AUTH_LOGOUT_SIGNOUT_PROTOCOL.md  AUTH_TEST_SUMMARY.md  AUTORIA_AUTH_DIAGNOSTIC.md  AUTORIA_HEADER_AND_BADGE_FIX.md  AUTORIA_PROTECTION_GUIDE.md  BACKEND_CONNECTION_SOLUTION.md  BADGES_AND_DRAFT_STATUS.md  BRAND_LOGO_FIX_SUMMARY.md  CHECK_DEPLOYMENT.ps1  CHECK_ENV_INSTRUCTIONS.md  CHECK_RENDER_DEPLOYMENT.ps1  CLASSIFICATION_FIX.md  CLOUDFLARE_TUNNEL_SETUP.md  COMPLETE_MODERATION_FIX_SUMMARY.md  COMPLETE_SUCCESS.md  CRAWLER_TEST_REPORT.md  CRAWLER_TEST_RESULTS.md  CURRENCY_AND_LAYOUT_CLARIFICATION.md  CURRENT_ISSUES_AND_SOLUTIONS.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_FILES_CHECKLIST.md  (+148 more)
backend/: .dockerignore  .env  .env.local  AutoRia_API_Complete_Test_Suite.postman_collection.json  AutoRia_API_Complete_Test_Suite.postman_environment.json  AutoRia_API_Core.postman_collection.json  AutoRia_API_Currency.postman_collection.json  AutoRia_API_Moderation.postman_collection.json  AutoRia_Complete_197_Endpoints_FULL_SWAGGER.postman_collection.json  CHANGELOG_TEST_ADS_FIX.md  COMPLETE_TEST_REPORT.md  CURRENT_STATUS_REPORT.md  Dockerfile  FINAL_LLM_MODERATION_STATUS.md  FINAL_LLM_STATUS.md  FINAL_STATUS_100_PERCENT.md  FINAL_TEST_STATUS.md  IMAGE_GENERATION_IMPROVEMENTS.md  LANGCHAIN_INTEGRATION.md  LLM_MODERATION_REPORT.md  PERFECT_LLM_STATUS.md  POSTMAN_COLLECTIONS_STRUCTURE.md  POSTMAN_TESTING_GUIDE.md  POSTMAN_USAGE_GUIDE.md  PRICE_AND_CARD_IMPROVEMENTS.md  Procfile  README.md  SERIALIZER_VALIDATION_REFACTORING.md  TESTING_BRAND_LOGO_FIX.md  create_test_moderation_data_fixed.py  entrypoint.sh  health_check.py  pyproject.toml  requirements.txt  requirements_vercel.txt  vercel.json
backend/api/: index.py  requirements.txt
backend/apps/: __init__.py
backend/apps/accounts/: filters.py  models.py  urls.py
backend/apps/ads/: apps.py  filters.py  permissions.py  signals.py  tasks.py  urls.py
backend/apps/auth/: oauth2_urls.py  serializers.py  urls.py
backend/apps/chat/: ARCHITECTURE.md  README.md  README_REFACTORING.md  agent.py  apps.py  consumer.py  graph.py  routing.py  test_consumer_chat.py  test_enhanced_agent.py  test_llm_classifier.py  urls.py
backend/apps/config/: __init__.py  apps.py  views.py
backend/apps/currency/: apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/moderation/: API_DOCUMENTATION.md  README.md  admin.py  apps.py  models.py  serializers.py  swagger_schemas.py  tasks.py  urls.py  views.py
backend/apps/tokens/: __init__.py
backend/apps/users/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/archive_old_collections/: AutoRia_ADMIN_ENDPOINTS.postman_collection.json  AutoRia_AI_ENDPOINTS.postman_collection.json  AutoRia_ANALYTICS_ENDPOINTS.postman_collection.json  AutoRia_Complete_197_Endpoints_FULL_SWAGGER.postman_collection.json  AutoRia_MISSING_ENDPOINTS.postman_collection.json  README.md
backend/config/: __init__.py  asgi.py  asgi_simple.py  celery.py  routing.py  settings.py  settings_minimal.py  settings_minimal_test.py  settings_production.py  settings_railway.py  settings_vercel.py  urls.py  urls_minimal.py  urls_minimal_test.py  urls_railway.py  urls_vercel.py  wsgi_minimal.py  wsgi_simple.py
backend/config/docs/: urls.py
backend/config/extra_config/: __init__.py  analytics_config.py  apps_config.py  cache_config.py  channels_config.py  constants_config.py  cors_config.py  db_config.py  django_core.py  email_config.py  environment.py  logger_config.py  rest_framework_config.py  security_config.py  security_logging_config.py  simple_jwt_config.py  swagger_config.py
backend/core/: apps.py  celery_client.py  permissions.py  test_runner.py  views.py
backend/core/consumers/: __init__.py  manager.py
backend/core/data/: cars_dict_output.csv
backend/core/decorators/: cache_decorators.py
backend/core/dto/: __init__.py  car_ad_dto.py
backend/core/enums/: ads.py  cars.py
backend/core/exceptions/: car_ad_exceptions.py  handler.py
backend/core/middlewares/: auth_socket.py  cors.py  iframe.py  metrics.py
backend/core/models/: __init__.py  (+1 more)
backend/docker/: Dockerfile.consumers
backend/docs/: ADVANCED_MODERATION_SYSTEM.md  API_COMPLETE_GUIDE.md  CANONICAL_STRUCTURE.md  FILTERING_PAGINATION_SORTING_SYSTEM.md  MOCK_DATA_SYSTEM.md  POSTMAN_COLLECTIONS_STRUCTURE.md  README.md  SUPERUSER_ENDPOINTS.md  celery_tasks.md  media_cleanup.md
backend/media/: seeding_history.json
backend/modules/: load_django.py  wait_for_db.py
backend/scripts/: README.md  add_model_suffixes.py  archive_and_remove_tests_integration.py  auto_seed_references.py  cleanup_project.py  cleanup_test_duplicates.py  create_dynamic_postman_collection.py  create_final_collection.py  create_final_postman_collection.py  create_integration_postman_collection.py  demo_llm_validation.py  encrypt_keys_for_backend.py  enhance_postman_with_tests.py  final_cleanup.py  get_all_endpoints.py  init_minio_direct.py  init_project.py  init_project.sh  organize_reference_models.py  register-service.py  rename_model_files.py  reset_migrations.py  run_dynamic_tests.py  run_full_tests.py  sync_dependencies.py  test_auto_populate.py  test_geocode_generation.py  update_postman_environment.py  wait_for_db_standalone.py
backend/tests/: __init__.py
celery-service/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml
celery-service/config/: __init__.py  celery_app.py
celery-service/tasks/: cleanup_tasks.py  data_processing_tasks.py  email_tasks.py  notification_tasks.py
mailing/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.docker.toml  pyproject.toml
mailing/src/: app.py  config.py
(+1774 files in other folders)
