[tool.poetry]
name = "drf-lessons-sept-2024"
version = "0.1.0"
description = "Django REST Framework lessons project"
authors = ["Vadim <pvs.versia@gmail.com>"]
readme = "README.md"
packages = [{include = "apps"}, {include = "config"}, {include = "core"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# ============================================================================
# CORE DJANGO & API
# ============================================================================
django = "^5.2.4"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.5.0"
django-filter = "^25.1"
django-cors-headers = "^4.7.0"
drf-yasg = "^1.21.10"
drf-spectacular = "^0.27.0"
django-ninja = "^1.4.3"
django-oauth-toolkit = "^3.0.0"
django-ratelimit = "^4.1.0"

# ============================================================================
# DATABASE
# ============================================================================
psycopg2 = "^2.9.10"

# ============================================================================
# WEBSOCKETS & REAL-TIME
# ============================================================================
channels = "^4.2.2"
channels-redis = "^4.2.1"
django-redis = "^6.0.0"
redis = "^5.0.0"
djangochannelsrestframework = "^1.3.0"
daphne = "^4.1.2"

# ============================================================================
# TASK QUEUE (CELERY)
# ============================================================================
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
pika = "^1.3.2"

# ============================================================================
# CONFIGURATION & ENVIRONMENT
# ============================================================================
python-dotenv = "^1.0.0"
pytz = "^2025.2"
tzdata = "^2024.1"

# ============================================================================
# VALIDATION & SERIALIZATION
# ============================================================================
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.5.0"
orjson = "^3.10.12"
marshmallow = "^3.21.0"

# ============================================================================
# HTTP & NETWORKING
# ============================================================================
requests = "^2.32.3"
httpx = {extras = ["http2"], version = "^0.28.1"}
aiohttp = "^3.10.0"
urllib3 = "^2.2.0"
websockets = "^13.0.0"

# ============================================================================
# SECURITY & CRYPTO
# ============================================================================
cryptography = "^44.0.2"
pycryptodomex = "^3.23.0"
PyJWT = "^2.9.0"

# ============================================================================
# FILE PROCESSING & MEDIA
# ============================================================================
pillow = "^10.4.0"
lxml = "^5.2.2"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"
cssselect = "^1.2.0"
markdown = "^3.6"
chardet = "^5.2.0"
python-dateutil = "^2.9.0.post0"
dateparser = "^1.2.2"

# ============================================================================
# DOCUMENT PROCESSING
# ============================================================================
openpyxl = "^3.1.2"
python-docx = "^1.1.0"
PyPDF2 = "^3.0.1"
python-pptx = "^0.6.23"
xlrd = "^2.0.1"
reportlab = "^4.0.0"

# ============================================================================
# DATA ANALYSIS & SCIENCE
# ============================================================================
pandas = "^2.2.0"
numpy = "^2.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
plotly = "^5.17.0"
scipy = "^1.14.0"
sympy = "^1.13.0"
numexpr = "^2.10.0"

# ============================================================================
# IMAGE & COMPUTER VISION
# ============================================================================
opencv-python = "^4.10.0"
pytesseract = "^0.3.10"

# ============================================================================
# AI & LLM - LANGCHAIN ECOSYSTEM
# ============================================================================
openai = "^1.3.0"
langchain = "^0.3.10"
langchain-core = "^0.3.20"
langchain-community = "^0.3.10"
langchain-openai = "^0.2.10"
langgraph = "^0.2.50"

# ============================================================================
# AI & LLM - G4F (Free GPT)
# ============================================================================
g4f = "^0.5.1.5"

# ============================================================================
# WEB SCRAPING & CRAWLING
# ============================================================================
crawl4ai = ">=0.6.3,<0.7.0"
playwright = "^1.48.0"
readability-lxml = "^0.8.4.1"
curl-cffi = "^0.11.4"
browser-cookie3 = "^0.19.1"

# ============================================================================
# NLP & TEXT PROCESSING
# ============================================================================
nltk = "^3.9.1"
spacy = "^3.8.0"
textstat = "^0.7.4"
sumy = "^0.11.0"

# ============================================================================
# SEARCH & API INTEGRATIONS
# ============================================================================
serpapi = "^0.1.5"
duckduckgo-search = "^6.3.0"

# ============================================================================
# DATABASE & ORM (additional)
# ============================================================================
sqlalchemy = "^2.0.35"
alembic = "^1.14.0"

# ============================================================================
# TASK SCHEDULING
# ============================================================================
schedule = "^1.2.0"

# ============================================================================
# CACHING & PERFORMANCE
# ============================================================================
joblib = "^1.4.0"
cachetools = "^5.5.0"

# ============================================================================
# MONITORING & LOGGING
# ============================================================================
sentry-sdk = "^2.17.0"
structlog = "^24.4.0"
loguru = "^0.7.2"

# ============================================================================
# CLI & OUTPUT
# ============================================================================
rich = "^13.9.0"
tqdm = "^4.66.0"
colorama = "^0.4.6"

# ============================================================================
# PRODUCTION SERVER
# ============================================================================
gunicorn = "^21.2.0"

# ============================================================================
# DEVELOPMENT DEPENDENCIES
# ============================================================================
[tool.poetry.group.dev.dependencies]
# Code formatting
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.9.2"

# Type checking
mypy = "^1.13.0"
types-requests = "^2.32.0"
types-beautifulsoup4 = "^4.12.0"
types-lxml = "^2024.9.0"
types-redis = "^4.6.0"
types-pillow = "^10.2.0"

# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-django = "^4.9.0"
pytest-mock = "^3.14.0"

# Documentation
sphinx = "^8.1.0"
mkdocs = "^1.6.0"

# Code quality
bandit = "^1.7.0"
safety = "^3.2.0"

# Database tools
pgcli = "^4.1.0"

# ============================================================================
# OPTIONAL GROUPS
# ============================================================================
[tool.poetry.group.cloud]
optional = true

[tool.poetry.group.cloud.dependencies]
boto3 = "^1.37.15"
django-storages = {extras = ["boto3"], version = "^1.14.5"}

[tool.poetry.group.maps]
optional = true

[tool.poetry.group.maps.dependencies]
googlemaps = "^4.10.0"

# ============================================================================
# CONFIGURATION
# ============================================================================
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "B", "Q", "S", "I"]
ignore = ["E501", "S105"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
